# mwvc

./: .gitignore  README.md
solver/: CMakeLists.txt  Instance.hpp  a.out  main.cpp  solver.hpp  state.hpp
solver/results/constructive/: alpi.txt  lpi.txt  mp2.txt  mpi1.txt  spi1.txt  spi2.txt
solver/results/constructive/newResults/: alpi.txt  lpi.txt  mp2.txt  mpi1.txt  spi1.txt  spi2.txt
solver/results/genetic/: alpi.txt  lpi.txt  mp2.txt  mpi1.txt  resultsGenetic.txt  spi1.txt  spi2.txt
solver/results/localSearch/best improve/: swapAdjacent.txt  swapAdjacent2.txt
solver/results/localSearch/best improve/swap2adjacent/: lpi.txt  mp2.txt  mpi1.txt  spi1.txt  spi2.txt
solver/results/localSearch/best improve/swapAdjacent/: lpi.txt  mp2.txt  mpi1.txt  spi1.txt  spi2.txt
solver/results/localSearch/first improve/: swap2Adjacent.txt  swapAdjacent.txt
solver/results/localSearch/first improve/swap2adjacent/: alpi.txt  lpi.txt  mp2.txt  mpi1.txt  spi1.txt  spi2.txt
solver/results/localSearch/first improve/swapAdjacent/: alpi.txt  lpi.txt  mp2.txt  (+3 more)
solver/results/simAnnealing/: swapAdjacent.txt  swapAdjacent2.txt
solver/results/simAnnealing/swap2adjacent/: alpi.txt  lpi.txt  mp2.txt  mpi1.txt  spi2.txt
solver/results/simAnnealing/swapAdjacent/: alpi.txt  lpi.txt  mp2.txt  mpi1.txt
solver/results/stateOfArt/: alpi.txt  lpi.txt  mpi1.txt  mpi2.txt  spi1.txt  spi2.txt
solver/results/vns/: vns.txt  vns2.txt
solver/results/vns/bestImprv/: lpi.txt  mp2.txt  mpi1.txt
solver/results/vns/firstImprv/: alpi.txt  lpi.txt  mp2.txt  mpi1.txt  spi1.txt  spi2.txt
(+2293 files in other folders)
